# rtab_ws

./: .gitignore  .gitmodules  SETUP.md  cmd.txt  env_setup.bash
maps/3_methodes/00/: poses_odom.txt
maps/3_methodes/01/: poses_odom.txt
maps/6_methods/00/: poses_odom.txt
maps/6_methods/01/: poses_odom.txt
src/rtabmap_bringup/: CMakeLists.txt  package.xml
src/rtabmap_bringup/launch/: bag_play.launch.py  bringup.launch.py
src/rtabmap_bringup/scripts/: velodyne_filter.py
