<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rtabmap_bringup</name>
    <version>0.0.0</version>
    <description>Bringup package for RTAB-Map with fixed TF transforms</description>
    <maintainer email="user@example.com">User</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>rtabmap_launch</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>sensor_msgs_py</exec_depend>
    <exec_depend>python3-numpy</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
